# the-slide

./: .gitignore  README.md  Taskfile.yaml  lefthook.yaml  mise.toml  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: deploy.yaml  main.yaml
content/: conf.py  index.rst
content/_static/css/: theme.css
content/graph/: doctree.mmd  sphinx-step-0.mmd  sphinx-step-1.mmd  sphinx-step-2.mmd  sphinx-step-3.mmd  sphinx-step-4.mmd
src/the_slide/: __init__.py
