[project]
name = "the-slide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sphinx-revealjs>=3.0.5",
]

[dependency-groups]
dev = [
    "esbonio>=0.16.5",
    "ruff>=0.8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true

[tool.hatch.metadata]
allow-redirect-references = true

[tool.hatch.build.target.wheel]
packages = ["src/the_slide"]
