[project]
name = "the-slide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asciinema>=2.4.0",
    "atsphinx-mini18n>=0.4.0",
    "oembedpy>=0.8.0",
    "sphinx-design>=0.6.1",
    "sphinx-intl>=2.3.1",
    "sphinx-nekochan>=0.1.5",
    "sphinx-plotly-directive>=0.1.3",
    "sphinx-revealjs>=3.1.0",
    "sphinxcontrib-mermaid>=1.0.0",
    "sphinxemoji>=0.3.1",
]

[dependency-groups]
dev = [
    "doc8>=1.1.2",
    "esbonio>=0.16.5",
    "lefthook>=1.9.2",
    "mypy>=1.13.0",
    "ruff>=0.8.3",
    "sphinx-autobuild>=2024.10.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true

[tool.hatch.metadata]
allow-redirect-references = true

[tool.hatch.build.target.wheel]
packages = ["src/the_slide"]
